# openccm

./: .gitignore  .hgtags  AUTHORS.md  CITATION.cff  CONFIG  CONFIG_REACTIONS  INSTALL.md  README.md  setup.cfg
.github/workflows/: docs.yml  draft-pdf.yml
examples/OpenCMP/closed_box/: CONFIG  analyze.py  box.geo  box.msh  config_INS  config_MCINS  config_Stokes  convert.py  reactions  run_opencmp.py
examples/OpenCMP/closed_box/bc_dir/: bc_config
examples/OpenCMP/pipe_with_recirc_2d/: CONFIG  CONFIG_W_RXN  README.md  analysis.py  cfd_rtd.npy  config_INS  config_MCINS  config_Stokes  convert.py  pipe.geo  pipe.msh  reactions  run_compartment.py  run_compartment_w_rxn.py  run_opencmp.py
examples/OpenCMP/pipe_with_recirc_2d/bc_dir/: bc_config
examples/OpenCMP/pipe_with_recirc_2d/ic_dir/: ic_config
examples/OpenCMP/pipe_with_recirc_2d/model_dir/: model_config
examples/OpenFOAM/3d_pipe/: CONFIG  analyze_results.py  run_compartment.py
examples/OpenFOAM/3d_pipe/velocity_profile/: 3d_pipe.geo
examples/OpenFOAM/pipe_with_recirc/: CONFIG  Instructions_openfoam.txt  README.md  analysis.py  pipe_recirc_structured.geo  pipe_recirc_structured.msh  run_compartment.py
examples/OpenFOAM/pipe_with_recirc/0/: U  V  p  phi
examples/OpenFOAM/pipe_with_recirc/1000/: U  V  p  phi
examples/OpenFOAM/pipe_with_recirc/1244/: U  V  p  phi
examples/OpenFOAM/pipe_with_recirc/_0/: T  Vc  p
examples/OpenFOAM/pipe_with_recirc/system/: controlDict  fvSchemes  fvSolution
examples/OpenFOAM/pipe_with_recirc_3d/: CONFIG  README.md  analyze_results.py  reactions
examples/OpenFOAM/pipe_with_recirc_3d/velocity_profile/: pipe_recirc_structured.geo
examples/simple_reactors/cstr/irreversible/: CONFIG  analysis.tex  cstr_analysis.py  reactions
examples/simple_reactors/cstr/monod/: CONFIG  analysis.py  reactions
examples/simple_reactors/cstr/reversible/: CONFIG  analysis.tex  cstr_analysis.py  reactions
examples/simple_reactors/input_data_generation/: config_hydrodynamics  fake_sim_result_generator.py  input_sim_result_generator.py  v=1.geo  v=1.msh
examples/simple_reactors/pfr/: CONFIG  analysis.tex  pfr_analysis.py  reactions
openccm/: __init__.py  __main__.py  entry_points.py  run.py
openccm/compartment_models/: __init__.py  cstr.py  helpers.py  pfr.py
openccm/compartmentalize/: __init__.py  unidirectional.py
openccm/config_functions/: __init__.py  expanded_config_parser.py
openccm/docs/: __init__.py  installation_guide.py  package_interface.py  pipe_recirc_OpenCMP.py  pipe_recirc_OpenFOAM.py  simple_reactors_cstr.py  simple_reactors_pfr.py
openccm/io/: __init__.py  opencmp.py  openfoam.py
openccm/mesh/: __init__.py  cmesh.py  convert_ngsolve.py  convert_openfoam.py
openccm/postprocessing/: __init__.py  analysis.py  vtu_output.py
openccm/system_solvers/: __init__.py  boundary_and_initial_conditions.py  cstr_system.py  helper_functions.py  math_functions.py  pfr_system.py  reactions.py
openccm/tests/: CONFIG  README.md  __init__.py  test_run_examples.py  test_tweak_compartment_flows.py
publications/2403_JOSS/: paper.bib  paper.md
pytests/: README.md  test_run_examples.py  test_tweak_compartment_flows.py
(+64 files in other folders)
