[metadata]
name = openccm
version = 1.0
description = OpenCCM is a compartmental modelling software package which is based on recently-developed fully automated flow alignment compartmentalization methods. It is primarily intended for large-scale flow-based processes where there is weak coupling between composition changes, e.g. through (bio)chemical reactions, and convective mass transport in the system. 
long_description = file: README.md, LICENSE.md
keywords = reduced-order modelling, compartmentalization, compartment modelling, continuum mechanics
license = GNU Lesser General Public License v2.1
classifiers =
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe = False
include_package_data = False
packages = find:
install_requires =
    numpy;python_version>'3.7.0'
    scipy;python_version>'3.7.0'
    sympy;python_version>'3.7.0'
    numba;python_version>'3.7.0'
    configparser;python_version>'3.7.0'
    pyparsing;python_version>'3.7.0'
    pdoc;python_version>'3.7.0'

[options.package_data]


[options.entry_points]
console_scripts =
    openccm = openccm.entry_points:run_openccm
    openccm-tests = openccm.entry_points:run_tests

[options.extras_require]
test =
    pytest;python_version>'3.7'
    opencmp;python_version>'3.7'
network_vis =
    matplotlib;python_version>'3.7'
    networkX;python_version>'3.7'
all =
    pytest;python_version>'3.7'
    matplotlib;python_version>'3.7'
    networkX;python_version>'3.7'
    opencmp;python_version>'3.7'

[options.packages.find]
